creacion de formulario de contacto

--- a/contact.html
+++ b/contact.html
@@ -117,15 +117,19 @@
   <section>
     <div class="menu-carousel">
       <div class="flecha-izq">
-        <img src="http://1.bp.blogspot.com/-FS6YXyFZVGU/T2FBP8QSLaI/AAAAAAAAAVs/ONlVGeQ7jG4/s400/flecha-izquierda.png"
+        <a href="#">
+          <img src="http://1.bp.blogspot.com/-FS6YXyFZVGU/T2FBP8QSLaI/AAAAAAAAAVs/ONlVGeQ7jG4/s400/flecha-izquierda.png"
           alt="flecha izquierda">
+        </a>
       </div>
       <div class="titulo-pagina">
         <h1>CONTACT US</h1>
       </div>
       <div class="flecha-der">
-        <img src="http://1.bp.blogspot.com/-z-4YOgK4ibQ/T2FBPvNbqEI/AAAAAAAAAVk/xpViI0MNXAQ/s400/flecha-derecha.png"
+        <a href="#">
+          <img src="http://1.bp.blogspot.com/-z-4YOgK4ibQ/T2FBPvNbqEI/AAAAAAAAAVk/xpViI0MNXAQ/s400/flecha-derecha.png"
           alt="flecha derecha">
+        </a>
       </div>
     </div>
   </section>
