leves modificaciones a las primeras paginas

--- a/upcoming.html
+++ b/upcoming.html
@@ -117,15 +117,19 @@
   <section>
     <div class="menu-carousel">
       <div class="flecha-izq">
-        <img src="http://1.bp.blogspot.com/-FS6YXyFZVGU/T2FBP8QSLaI/AAAAAAAAAVs/ONlVGeQ7jG4/s400/flecha-izquierda.png"
+        <a href="#">
+          <img src="http://1.bp.blogspot.com/-FS6YXyFZVGU/T2FBP8QSLaI/AAAAAAAAAVs/ONlVGeQ7jG4/s400/flecha-izquierda.png"
           alt="flecha izquierda">
+        </a>
       </div>
       <div class="titulo-pagina">
         <h1>UPCOMING EVENTS</h1>
       </div>
       <div class="flecha-der">
-        <img src="http://1.bp.blogspot.com/-z-4YOgK4ibQ/T2FBPvNbqEI/AAAAAAAAAVk/xpViI0MNXAQ/s400/flecha-derecha.png"
+        <a href="#">
+          <img src="http://1.bp.blogspot.com/-z-4YOgK4ibQ/T2FBPvNbqEI/AAAAAAAAAVk/xpViI0MNXAQ/s400/flecha-derecha.png"
           alt="flecha derecha">
+        </a>
       </div>
     </div>
   </section>
@@ -153,7 +157,7 @@
         </div>
         <div class="buscador">
           <input type="search" name="search">
-          <button type="submit">Lupa</button>
+          <button class="search-button"><img src="https://antares.sip.ucm.es/forte-cm/img/iconos/buscador.png" alt="lupa para buscar"></button>
         </div>
       </div>
       <div class="container-cards">
@@ -165,7 +169,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>Ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -176,7 +180,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>Ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -187,7 +191,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>Ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -198,7 +202,7 @@
           </div>
           <div class="pie-de-card">
             <p>price 0000</p>
-            <button>ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -209,7 +213,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -220,7 +224,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
         <div class="card">
@@ -231,7 +235,7 @@
           </div>
           <div class="pie-de-card">
             <p>Price 0000</p>
-            <button>ver mas</button>
+            <button><a href="./details.html">Ver mas</a></button>
           </div>
         </div>
       </div>
