--- a/contact.html
+++ b/contact.html
@@ -16,94 +16,15 @@
 </head>
 
 <body>
-  <!--     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="min-height: 10vh;">
-            <div class="container-fluid">
-              <a class="navbar-brand ms-3" href="#">
-                <img src="./assets/Logo-Amazing-Events.png" alt="logo Amazing Events" width= "200px">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0 gap-5 me-5 align-items-center">
-                  <li class="nav-item" style="width: 200px;">
-                    <a class="nav-link active rounded-pill bg-dark bg-gradient text-light border border-white"  aria-current="page" style="font-weight: 700; font-size: 1.4rem; text-align: center;" href="#">Home</a>
-                  </li>
-                  <li class="nav-item" style="width: 200px;">
-                    <a class="nav-link rounded-pill bg-light bg-gradient text-dark border border-secondary" style="font-weight: 700; font-size: 1.39rem; text-align: center;" href="./upcoming.html">Upcoming Events</a>
-                  </li>
-                  <li class="nav-item" style="width: 200px; height: 55px;">
-                    <a class="nav-link rounded-pill bg-light bg-gradient text-dark border border-secondary" style="font-weight: 700; font-size: 1.4rem; text-align: center;" href="./past-events.html">Past Events</a>
-                  </li>
-                  <li class="nav-item" style="width: 200px;">
-                    <a class="nav-link rounded-pill bg-light bg-gradient text-dark border border-secondary" style="font-weight: 700; font-size: 1.4rem; text-align: center;" href="./contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item" style="width: 200px;">
-                    <a class="nav-link rounded-pill bg-light bg-gradient text-dark border border-secondary" style="font-weight: 700; font-size: 1.4rem; text-align: center;" href="./stats.html">Stats</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header> -->
-
-  <!-- <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="min-height: 10vh; width: 90%;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./assets/Logo-Amazing-Events.png" alt="logo amazing events" width="200px">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav mb-2 mb-lg-0 gap-4 me-5 align-items-center">
-          <a class="nav-link active rounded-pill bg-light bg-gradient text-dark border border-secondary" aria-current="page" style="font-weight: 700; font-size: 1.4rem; text-align: center; width: 200px;" href="#">Home</a>
-          <a class="nav-link rounded-pill bg-dark bg-gradient text-light border border-secondary" style="font-weight: 700; font-size: 1.39rem; text-align: center; width: 200px;" href="./upcoming.html">Upcoming Events</a>
-          <a class="nav-link rounded-pill bg-dark bg-gradient text-light border border-secondary" style="font-weight: 700; font-size: 1.39rem; text-align: center; width: 200px;" href="./past-events.html">Past Events</a>
-          <a class="nav-link rounded-pill bg-dark bg-gradient text-light border border-secondary" style="font-weight: 700; font-size: 1.39rem; text-align: center; width: 200px;" href="./contact.html">Contact</a>
-          <a class="nav-link rounded-pill bg-dark bg-gradient text-light border border-secondary" style="font-weight: 700; font-size: 1.39rem; text-align: center; width: 200px;" href="./stats.html">Stats</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-</header>
-
-    <section style="height: 6vh; width: 100%;">
-       <div class="carrusel-cambia-pagina d-flex justify-content-between align-items-center bg-secondary bg-gradient" style="height: 100%;">
-        <div class="flecha-izq ms-4">
-            <img src="https://i.pinimg.com/originals/50/e2/03/50e203e1fc2c2ca5f40e0723a24c4978.png" style="width: 50px;" alt="flecha izquierda">
-        </div>
-        <div class="texto-carrusel">
-            <h2 style="font-size: 2.1rem;">HOME</h2>
-        </div>
-        <div class="flecha-der me-4">
-            <img src="https://cdn-icons-png.flaticon.com/512/39/39570.png" style="width: 50px;" alt="flecha derecha">
-        </div>
-       </div>
-    </section>
-
-    <main style="min-height: 74vh; background-color: blue;">
-
-    </main>
-
-    <footer class="footer d-flex" style="max-height: 10vh; width: 100%; background-color: red;">
-        <div class="instagram-logo d-flex rounded-circle" style="width: 100px; border: 2px 2px solid black;">
-            <a href="#" class="d-flex align-items-center ms-3"><img src="https://www.pngmart.com/files/21/Instagram-Logo-PNG.png" style="background-color: black; height: 80%;" alt="logo instagram"></a>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> -->
 
   <header>
     <div class="container-header">
       <div class="logo">
-        <a href="#">
+        <a href="./index.html">
           <img src="./assets/Logo-Amazing-Events.png" alt="logo amazing events">
         </a>
       </div>
-      <div>
+      <div class="navigation">
         <nav>
           <a href="./index.html">Home</a>
           <a href="./upcoming.html">Upcoming Events</a>
@@ -117,8 +38,8 @@
   <section>
     <div class="menu-carousel">
       <div class="flecha-izq">
-        <a href="#">
-          <img src="http://1.bp.blogspot.com/-FS6YXyFZVGU/T2FBP8QSLaI/AAAAAAAAAVs/ONlVGeQ7jG4/s400/flecha-izquierda.png"
+        <a href="./past-events.html">
+          <img src="./assets/arrow-left.png"
           alt="flecha izquierda">
         </a>
       </div>
@@ -126,8 +47,8 @@
         <h1>CONTACT US</h1>
       </div>
       <div class="flecha-der">
-        <a href="#">
-          <img src="http://1.bp.blogspot.com/-z-4YOgK4ibQ/T2FBPvNbqEI/AAAAAAAAAVk/xpViI0MNXAQ/s400/flecha-derecha.png"
+        <a href="./stats.html">
+          <img src="./assets/arrow-right.png"
           alt="flecha derecha">
         </a>
       </div>
