aniadiendo el script a los archivos html y eliminando las cards estaticas

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="container-cards">
-        <div class="card">
+        <!-- <div class="card">
           <img src="./assets/Books.jpg" alt="books">
           <div class="titulo-card">
             <h3>Title</h3>
@@ -157,7 +157,7 @@
             <p>Price 0000</p>
             <a class="button" href="./details.html">View more</a>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
@@ -184,6 +184,9 @@
       </div>
     </div>
   </footer>
+  
+  <script src="./data.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
