--- a/upcoming.html
+++ b/upcoming.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="container-cards">
-        <div class="card">
+        <!-- <div class="card">
           <img src="./assets/Books.jpg" alt="books">
           <div class="titulo-card">
             <h3>Title</h3>
@@ -158,7 +158,7 @@
             <p>Price 0000</p>
             <a class="button" href="./details.html">View more</a>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
@@ -187,6 +187,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="./data.js"></script>
+  <script src="./upcoming.js"></script>
 </body>
 
 </html>
