aniadiendo el script a la pagina details

--- a/details.html
+++ b/details.html
@@ -40,7 +40,7 @@
         <div class="general-container-details">
             
             <div class="container-cards-details">
-                <div class="card-details">
+                <!-- <div class="card-details">
                     <div class="img-card">
                         <img src="./assets/Books.jpg" alt="books">
                     </div>
@@ -50,7 +50,7 @@
                     <p>Descriptive text</p>
                     <p>Descriptive text</p>
                   </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -77,6 +77,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="./data.js"></script>
+    <script src="./details.js"></script>
 </body>
 
 </html>
