agregue los titulos de los head que faltaban

--- a/details.html
+++ b/details.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/amazing-events.ico.png" type="image/x-icon">
-    <title>Upcoming Events - AMAZING EVENTS</title>
+    <title>Details - AMAZING EVENTS</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,19 +38,19 @@
 
     <main>
         <div class="general-container-details">
-            
+
             <div class="container-cards-details">
-                <!-- <div class="card-details">
+                <div class="card-details">
                     <div class="img-card">
                         <img src="./assets/Books.jpg" alt="books">
                     </div>
-                  <div class="titulo-card-details">
-                    <h3>Title</h3>
-                    <p>Descriptive text</p>
-                    <p>Descriptive text</p>
-                    <p>Descriptive text</p>
-                  </div>
-                </div> -->
+                    <div class="titulo-card-details">
+                        <h3>Title</h3>
+                        <p>Descriptive text</p>
+                        <p>Descriptive text</p>
+                        <p>Descriptive text</p>
+                    </div>
+                </div>
             </div>
 
         </div>
