--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     </div>
   </footer>
   
-  <script src="./data.js"></script>
-  <script src="./main.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
