--- a/past-events.html
+++ b/past-events.html
@@ -112,8 +112,8 @@
     </div>
   </footer>
 
-  <script src="./data.js"></script>
-  <script src="./pastevents.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/pastevents.js"></script>
 </body>
 
 </html>
