--- a/upcoming.html
+++ b/upcoming.html
@@ -112,8 +112,8 @@
     </div>
   </footer>
 
-  <script src="./data.js"></script>
-  <script src="./upcoming.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/upcoming.js"></script>
 </body>
 
 </html>
