agregue clases nuevas a la barra de busqueda y el boton de busqueda

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </fieldset>
         </div>
         <div class="buscador">
-          <input type="search" name="search">
+          <input class="search-bar" type="text" name="search" placeholder="I'm looking for...">
           <button type="submit" class="search-button"><img
               src="https://antares.sip.ucm.es/forte-cm/img/iconos/buscador.png" alt="lupa para buscar"></button>
         </div>
