--- a/upcoming.html
+++ b/upcoming.html
@@ -77,7 +77,7 @@
           </fieldset>
         </div>
         <div class="buscador">
-          <input type="search" name="search">
+          <input type="text" name="search" placeholder="I'm looking for...">
           <button class="search-button"><img src="https://antares.sip.ucm.es/forte-cm/img/iconos/buscador.png" alt="lupa para buscar"></button>
         </div>
       </div>
