comence a crear el evento de busqueda

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="buscador">
           <input class="search-bar" type="text" name="search" placeholder="I'm looking for...">
-          <button type="submit" class="search-button"><img
+          <button id="button" type="submit" class="search-button"><img
               src="https://antares.sip.ucm.es/forte-cm/img/iconos/buscador.png" alt="lupa para buscar"></button>
         </div>
       </div>
