modificando todas las categorias de los checkbox

--- a/past-events.html
+++ b/past-events.html
@@ -58,27 +58,32 @@
     <div class="general-container">
       <div class="filtrador">
         <div class="seleccionador">
-          <fieldset>
+          <fieldset id="checkbox-container">
             <label>
-              <input type="checkbox" name="category" value="categoria-1">Category 1
+              <input class="checkbox" type="checkbox" name="category" id="food-fair" value="Food Fair">Food Fair
             </label>
             <label>
-              <input type="checkbox" name="category" value="categoria-2">Category 2
+              <input class="checkbox" type="checkbox" name="category" id="museum" value="Museum">Museum
             </label>
             <label>
-              <input type="checkbox" name="category" value="categoria-3">Category 3
+              <input class="checkbox" type="checkbox" name="category" id="costume-party" value="Costume Party">Costume Party
             </label>
             <label>
-              <input type="checkbox" name="category" value="categoria-4">Category 4
+              <input class="checkbox" type="checkbox" name="category" id="music-concert" value="Music Concert">Music Concert
             </label>
             <label>
-              <input type="checkbox" name="category" value="categoria-5">Category 5
+              <input class="checkbox" type="checkbox" name="category" id="race" value="Race">Race
+            </label>
+            <label>
+              <input class="checkbox" type="checkbox" name="category" id="book-exchange" value="Book Exchange">Book Exchange
+            </label>
+            <label>
+              <input class="checkbox" type="checkbox" name="category" id="cinema" value="Cinema">Cinema
             </label>
           </fieldset>
         </div>
         <div class="buscador">
-          <input type="text" name="search" placeholder="I'm looking for...">
-          <button class="search-button"><img src="https://antares.sip.ucm.es/forte-cm/img/iconos/buscador.png" alt="lupa para buscar"></button>
+          <input id="search-bar" type="text" name="search" placeholder="I'm looking for...">
         </div>
       </div>
       <div class="container-cards">
