ultimas funciones modificadas

--- a/details.html
+++ b/details.html
@@ -40,18 +40,8 @@
         <div class="general-container-details">
 
             <div class="container-cards-details">
-                <div class="card-details">
-                    <div class="img-card">
-                        <img src="./assets/Books.jpg" alt="books">
-                    </div>
-                    <div class="titulo-card-details">
-                        <h3>Title</h3>
-                        <p>Descriptive text</p>
-                        <p>Descriptive text</p>
-                        <p>Descriptive text</p>
-                    </div>
-                </div>
-            </div>
+               
+            </div> 
 
         </div>
     </main>
@@ -78,8 +68,8 @@
         </div>
     </footer>
 
-    <script src="./data.js"></script>
-    <script src="./details.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/details.js"></script>
 </body>
 
 </html>
