--- a/past-events.html
+++ b/past-events.html
@@ -96,7 +96,7 @@
     </div>
   </footer>
 
-  <script src="./js/pastevents.js"></script>
+  <script type="module" src="./js/pastevents.js"></script>
 </body>
 
 </html>
