--- a/stats.html
+++ b/stats.html
@@ -115,7 +115,7 @@
         </div>
     </footer>
 
-    <script src="./js/stats.js"></script>
+    <script type="module" src="./js/stats.js"></script>
 </body>
 
 </html>
