--- a/upcoming.html
+++ b/upcoming.html
@@ -96,7 +96,7 @@
     </div>
   </footer>
 
-  <script src="./js/upcoming.js"></script>
+  <script type="module" src="./js/upcoming.js"></script>
 </body>
 
 </html>
