--- a/details.html
+++ b/details.html
@@ -66,7 +66,7 @@
         </div>
     </footer>
 
-    <script src="./js/details.js"></script>
+    <script type="module" src="./js/details.js"></script>
 </body>
 
 </html>
